--- a/style.css
+++ b/style.css
@@ -147,6 +147,10 @@ ul li {
     list-style: none;
 }
 
+a { 
+    color: #EAB954;
+}
+
 /*//---------------------------------------------------------------------//
 //                               Elements                              //
 //---------------------------------------------------------------------//*/
